# leptos-shadcn-ui

./: ADR_ADHERENCE_REPORT.md  AGENTS.md  CHANGELOG.md  CLEANUP_COMPLETION_SUMMARY.md  COMPETITOR_ANALYSIS_2024.md  CONTRIBUTING.md  Cargo.minimal.toml  Cargo.toml  DEPLOYMENT.md  FINAL_RELEASE_SUCCESS_v0.9.0.md  LEPTOS_0.8.8_SIGNAL_INTEGRATION_SUCCESS.md  LEPTOS_V0.8_PUBLISHING_SUCCESS.md  LEPTOS_V0.8_VERIFICATION_PLAN.md  LEPTOS_V0.8_VERIFICATION_RESULTS.md  LICENSE  MARKET_POSITIONING_2025.md  Makefile  PERFORMANCE_BENCHMARKS_2025.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_5_COMPLETION_SUMMARY.md  PUBLISHING_PROGRESS_SUMMARY.md  PUBLISHING_PROGRESS_UPDATE.md  REACT_NEXTJS_ECOSYSTEM_COMPARISON_2025.md  README.md  REFACTORING_PROGRESS_REPORT.md  REFACTORING_SUMMARY.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.1.0_WASM.md  RELEASE_NOTES_v0.9.0.md  RELEASE_READY.md  RELEASE_SUMMARY.md  RELEASE_SUMMARY_v0.6.1.md  RELEASE_SUMMARY_v0.7.0.md  REMEDIATION_PLAN.md  TDD_REMEDIATION_IMPLEMENTATION_SUMMARY.md  TDD_TRANSFORMATION_SUCCESS.md  VALIDATION_GUIDE.md  bump_and_publish_v0.4.0.sh  check_published_packages.sh  (+12 more)
.github/: pages.yml
.github/workflows/: ci.yml.disabled  component-testing.yml.disabled  comprehensive-quality-gates.yml.disabled  comprehensive-testing.yml.disabled  demo-deploy.yml  e2e-tests.yml.disabled  performance-testing.yml.disabled
.nextest/: config.toml
comprehensive-demo/: Cargo.toml  build.sh  index.html
comprehensive-demo/src/: lib.rs
coverage-analysis/html/: index.html
demo/: index.html
docs/: README.md  REORGANIZATION_PLAN.md  SHADCN_COMPARISON.md  TAILWIND_RUST_LIBRARY_SPEC.md  feature-parity-design.md  implementation-plan.md  test-strategy.md
docs/architecture/: COVERAGE_ANALYSIS_REPORT_2025.md  README.md  README_INFRASTRUCTURE.md  component-batching-strategy.md  coverage-achievement-summary.md  coverage-remediation-plan-v2.md  coverage-remediation-plan.md  coverage-tool-recommendation.md  coverage-tools-comparison.md  feature-parity-design.md  leptos-0.8.8-migration-guide.md  leptos-0.8.8-signal-integration.md  llvm-cov-coverage-analysis.md  signal-management-api.md  tailwind-rs-gap-analysis.md  zero-coverage-priority-plan.md
docs/components/: ACCESSIBILITY_GUIDE.md  INTERACTIVE_TUTORIAL_GUIDE.md
docs/contributing/: ORGANIZATION_SUMMARY.md
docs/design/: README.md  button.md  input.md
docs/development/: component-generator.md
docs/examples/: signal-management-examples.md
docs/getting-started/: README.md
docs/infrastructure/: INFRASTRUCTURE_SETUP_GUIDE.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_INFRASTRUCTURE_GUIDE.md
docs/performance-audit/: README.md
docs/quality/: defects-register.md
docs/releases/: CHANGELOG.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_SUMMARY.md
docs/remediation/: 01-test-coverage-crisis.md  03-file-size-remediation.md  CODE_REFACTORING_PLAN.md  COMPLETE_52_COMPONENT_ANALYSIS.md  COMPLETE_52_COMPONENT_DESIGN_SUMMARY.md  COMPLETE_COMPONENT_ANALYSIS.md  COMPLETE_TEST_COVERAGE_ANALYSIS.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_ENGINEERING_REVIEW_2025.md  COMPREHENSIVE_REPOSITORY_ANALYSIS.md  CONDITIONAL_COMPILATION_DESIGN.md  ENGINEERING_ANALYSIS_SUMMARY.md  EXECUTIVE_SUMMARY.md  FILE_SIZE_QUICK_REFERENCE.md  IMPLEMENTATION_ROADMAP.md  README.md  RUST_VERSION_UPDATE_PLAN.md  TEST_COVERAGE_REMEDIATION_PLAN.md  WASM_COMPATIBILITY_REMEDIATION_PLAN.md  WASM_MINIMAL_VERSION_DESIGN.md  WASM_REMEDIATION_SUMMARY.md  api-standardization.md  build-system-remediation.md  command-component-fix.md  file-size-optimization.md  input-component-fix.md  signal-management-fix.md  stub-implementation-plan.md  stub-implementation.md
docs/roadmap/: COMPETITOR_ANALYSIS_2024.md  IMPLEMENTATION_SUMMARY.md  REACT_NEXTJS_ECOSYSTEM_COMPARISON_2025.md
docs/testing/: TESTING_GUIDE.md  WASM_TESTING_GUIDE.md  implementation-testing-summary.md  radio-group-testing-summary.md  test-generation-summary.md  tooltip-testing-summary.md
docs/v1.0-roadmap/: TDD_V1_ROADMAP.md
examples/comprehensive-demo/: Cargo.toml
examples/dashboard-demo/: Cargo.toml
examples/leptos/: Cargo.toml  index.html  playwright.config.ts  tailwind.config.js  test-results.json  test-results.xml
examples/leptos/src/: app.rs  comprehensive_demo.rs  main.rs  simple_test.rs
examples/leptos/src/default/: components_demo.rs
examples/leptos/style/: tailwind.css
examples/leptos/tests/: server-startup.spec.ts
gh-pages-demo/: Cargo.toml
gh-pages-demo/src/: lib.rs
leptos_v0_8_test_app/: Cargo.toml
leptos_v0_8_test_app/src/: main.rs
minimal-wasm-test/: Cargo.toml  index.html  test.html
minimal-wasm-test/src/: lib.rs
performance-audit/: Cargo.toml
scripts/: BATCH_SCRIPTS_OVERVIEW.md  apply_tdd_workspace.sh  batch_migrate_components.py  benchmark_runner.sh  check_published_status.sh  continuous_performance_monitor.py  create_advanced_integration_tests.py  create_integration_tests.py  create_integration_tests_fixed.py  create_performance_monitoring.py  create_performance_tests.py  create_real_tests.sh  create_simple_integration_tests.py  create_visual_regression_testing.py  deploy-demo.sh  deployment_validator.sh  disable_problematic_tests.py  enhance_wasm_coverage.py  enhance_wasm_tests.py  fix_all_compilation_errors.py  fix_all_variable_names.py  fix_compilation_issues.py  fix_component_names.py  fix_final_compilation_errors.py  fix_final_components.py  fix_module_references.py  fix_orphaned_cfg_test.py  fix_remaining_components.py  fix_signal_management_dependencies.py  fix_test_compilation_errors.py  fix_ultimate_compilation_errors.py  generate_clean_tests.py  generate_component_tests.rs  generate_comprehensive_tests.py  generate_tdd_tests.sh  measure_test_coverage.py  migrate_components.sh  migrate_to_leptos_v0.8.sh  optimized_publishing_sequence.md  production_monitor.sh  (+41 more)
standalone-demo/: Cargo.toml  index.html
standalone-demo/src/: lib.rs  (+4 more)
test-wasm-tailwind/: Cargo.toml
tests/: integration_test_runner.rs  performance_test_runner.rs  visual_test_runner.rs
wasm-demo/: Cargo.toml  index.html
wasm-demo/src/: lib.rs
(+98 files in other folders)
