[package]
name = "wasm-demo"
version = "0.1.0"
edition = "2021"
authors = ["CloudShuttle <info@cloudshuttle.com>"]
license = "MIT"
repository = "https://github.com/cloud-shuttle/leptos-shadcn-ui"
description = "WASM demo showcasing leptos-shadcn-ui-wasm package"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos-shadcn-ui-wasm = { path = "../packages/leptos-shadcn-ui-wasm" }

# WASM-specific dependencies
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element", 
    "HtmlElement",
    "Window",
    "Performance"
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
