[package]
name = "standalone-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Leptos framework with SSR
leptos = { version = "0.8", features = ["csr"] }
# leptos_axum = { version = "0.8", features = ["ssr"] } # Removed for WASM demo
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }

# WASM dependencies
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.0", features = ["v4", "js"] }

# Local components
leptos-shadcn-button = { path = "../../packages/leptos/button" }
leptos-shadcn-card = { path = "../../packages/leptos/card" }
leptos-shadcn-input = { path = "../../packages/leptos/input" }

# Tailwind-RS v0.4.2 (Latest with full Leptos integration)
tailwind-rs-core = "0.4.2"
tailwind-rs-leptos = "0.4.2"

# UUID support (already defined above)

# Binary target
[[bin]]
name = "standalone-demo"
path = "src/main.rs"